--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,45 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    /* max-width: 1280px; */
+    width: 90vw;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+header {
+    margin: 0 auto;
+}
+
+.article-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    list-style-type: none;
+    padding: 0;
+}
+
+.article-list li {
+    /* display: flex;
+    justify-content: center; */
+    width: 100%;
+    max-width: 450px;
+    margin: 16px;
+}
+
+.article-card {
+    border: 2px solid;
+}
+
+.article-card img {
+    width: 100%;
+    border-bottom: 2px solid;
+}
+
+.article-card div {
+    min-height: 72px;
+    font-size: 18pt;
+    text-align: left;
+    padding: 0px 8px 4px 8px;
 }
