--- a/src/App.css
+++ b/src/App.css
@@ -240,3 +240,56 @@ header {
 .add-comment-form-empty {
     border: 1px solid red;
 }
+
+.user-details {
+    padding: 16px;
+    margin: 16px;
+}
+
+.user-details img {
+    width: 150px;
+    height: 150px;
+    border: 2px solid;
+}
+
+@media only screen and (min-width: 768px) {
+    .user-details {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding: 16px;
+        margin: 16px;
+    }
+
+    .user-details img {
+        width: 200px;
+        height: 200px;
+        border: 2px solid;
+    }
+
+    .user-details-text {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+
+        margin: 16px;
+    }
+
+    .user-details-text h2 {
+        font-size: 32pt;
+        margin: 4px;
+    }
+
+    .user-details-text h3 {
+        font-size: 20pt;
+        margin: 4px;
+    }
+}
+
+.user-article-divider {
+    font-size: 20pt;
+    font-weight: 400;
+    border-bottom: 2px solid;
+    margin: 8px auto;
+}
